src/objects/Trifecta_Survey_Submission__c.object
<CustomObject>
    <description>Junction object to link up Survey and User/Contact to whom the survey is submitted.</description>
    <fields>
        <fullName>Avg_Weightage__c</fullName>
        <formula>IF( noOfWeightages__c &gt; 0, sumOfWeightage__c / noOfWeightages__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg.Weightage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Image__c</fullName>
        <formula>IF(Completed__c, IMAGE(&apos;/servlet/servlet.ImageServer?id=015c0000000MwbK&amp;oid=00Dc0000003ugjQ&apos;, &quot;True&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify whether the feedback is submitted by the user or not.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Indicator__c</fullName>
        <label>Completion Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Sent_Address__c</fullName>
        <label>Email Sent Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <formula>CreatedBy.Manager.Email</formula>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+  Id , IF(!ISBLANK(  Submitted_To_Name__c  ), Submitted_To_Name__c ,  Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_To_Name__c</fullName>
        <label>Submitted To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_To__c</fullName>
        <description>Id of User/Contact</description>
        <label>Submitted To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>Survey which is submitted</description>
        <label>Survey</label>
        <referenceTo>Trifecta_Survey__c</referenceTo>
        <relationshipLabel>Trifecta Survey Submissions</relationshipLabel>
        <relationshipName>Trifecta_Survey_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
	<fields>
        <fullName>Share_Link__c</fullName>
        <formula>IF(AND(NOT(CONTAINS(Submitted_To__c,&apos;@&apos;)),Completed__c),HYPERLINK(&apos;/apex/TestPage?id=&apos;&amp;Id+&apos;&amp;Survey=&apos;&amp;Survey__c,&apos;Share Link&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weightage_Indicator__c</fullName>
        <label>Weightage Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Less Than Threshold</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than Threshold</fullName>
                <color>#009900</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>noOfWeightages__c</fullName>
        <label>noOfWeightages</label>
        <summaryFilterItems>
            <field>Trifecta_Survey_Question_Response__c.weitage__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Trifecta_Survey_Question_Response__c.Survey_Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sumOfWeightage__c</fullName>
        <label>sumOfWeightage</label>
        <summarizedField>Trifecta_Survey_Question_Response__c.weitage__c</summarizedField>
        <summaryFilterItems>
            <field>Trifecta_Survey_Question_Response__c.weitage__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Trifecta_Survey_Question_Response__c.Survey_Submission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Trifecta Survey Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Completed__c</columns>
        <columns>Avg_Weightage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_Submissions</fullName>
        <columns>NAME</columns>
        <columns>Survey__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Completed Submissions</label>
    </listViews>
    <listViews>
        <fullName>Open_Submissions</fullName>
        <columns>NAME</columns>
        <columns>Survey__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Submissions</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{000000}</displayFormat>
        <label>Trifecta Survey Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trifecta Survey Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>